--- a/index.html
+++ b/index.html
@@ -1,23 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Le DOM</title>
+    <title>QUIZZ</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
+<h1>Quizz VRAI FAUX</h1>
 <div class="click-event box">
     <h4>Code 35 de cette page s'éxéceute cote serveur ?</h4>
     <button id="btn-1">VRAI</button>
     <button id="btn-2">FAUX</button>
     <p>La bonne réponse est FAUX</p>
 </div>
-<div class="click-event box">
+<div class="click-event2 box">
     <h4>Les humains peuvent respirer sous l'eau sans équipement spécial ?</h4>
-    <button id="btn-1">VRAI</button>
-    <button id="btn-2">FAUX</button>
+    <button id="btn-3">VRAI</button>
+    <button id="btn-4">FAUX</button>
     <p>La bonne réponse est FAUX</p>
 </div>
 <div class="click-event box">
@@ -36,7 +37,7 @@
     <h4>Les chats peuvent voir dans l'obscurité totale ?</h4>
     <button id="btn-1">VRAI</button>
     <button id="btn-2">FAUX</button>
-    <p>La bonne réponse est FAUX</p>
+    <p>La bonne réponse est VRAI</p>
 </div>
 <div class="click-event box">
     <h4>Le Mont Everest est la montagne la plus haute du monde ?</h4>
@@ -69,15 +70,8 @@
     <p>La bonne réponse est FAUX</p>
 </div>
 
-<form action="#" method="post" class="box">
-    <label>
-        <input type="text" placeholder="taper votre texte">
-    </label>
-    <input type="submit" value="Valider">
-    <div>
+<div id="result"></div>
 
-    </div>
-</form>
 
 <script src="index.js"></script>
 </body>
