--- a/index.html
+++ b/index.html
@@ -11,62 +11,62 @@
 <h1>Quizz VRAI FAUX</h1>
 <div class="click-event box">
     <h4>Code 35 de cette page s'éxéceute cote serveur ?</h4>
-    <button id="btn-1">VRAI</button>
-    <button id="btn-2">FAUX</button>
+    <button >VRAI</button>
+    <button  value="true">FAUX</button>
     <p>La bonne réponse est FAUX</p>
 </div>
-<div class="click-event2 box">
+<div class="click-event box">
     <h4>Les humains peuvent respirer sous l'eau sans équipement spécial ?</h4>
-    <button id="btn-3">VRAI</button>
-    <button id="btn-4">FAUX</button>
+    <button>VRAI</button>
+    <button value="true">FAUX</button>
     <p>La bonne réponse est FAUX</p>
 </div>
 <div class="click-event box">
     <h4>La capitale de l'Australie est Sydney ?</h4>
-    <button id="btn-1">VRAI</button>
-    <button id="btn-2">FAUX</button>
+    <button>VRAI</button>
+    <button  value="true">FAUX</button>
     <p>La bonne réponse est FAUX</p>
 </div>
 <div class="click-event box">
     <h4>La lumière voyage plus vite que le son ?</h4>
-    <button id="btn-1">VRAI</button>
-    <button id="btn-2">FAUX</button>
+    <button >VRAI</button>
+    <button value="true">FAUX</button>
     <p>La bonne réponse est FAUX</p>
 </div>
 <div class="click-event box">
     <h4>Les chats peuvent voir dans l'obscurité totale ?</h4>
-    <button id="btn-1">VRAI</button>
-    <button id="btn-2">FAUX</button>
+    <button >VRAI</button>
+    <button value="true">FAUX</button>
     <p>La bonne réponse est VRAI</p>
 </div>
 <div class="click-event box">
     <h4>Le Mont Everest est la montagne la plus haute du monde ?</h4>
-    <button id="btn-1">VRAI</button>
-    <button id="btn-2">FAUX</button>
+    <button >VRAI</button>
+    <button value="true">FAUX</button>
     <p>La bonne réponse est FAUX</p>
 </div>
 <div class="click-event box">
     <h4>L'ADN humain est identique à 90% à celui des bananes ?</h4>
-    <button id="btn-1">VRAI</button>
-    <button id="btn-2">FAUX</button>
+    <button >VRAI</button>
+    <button value="true">FAUX</button>
     <p>La bonne réponse est FAUX</p>
 </div>
 <div class="click-event box">
     <h4>La Terre est plus vieille que le Soleil ?</h4>
-    <button id="btn-1">VRAI</button>
-    <button id="btn-2">FAUX</button>
+    <button >VRAI</button>
+    <button value="true">FAUX</button>
     <p>La bonne réponse est FAUX</p>
 </div>
 <div class="click-event box">
     <h4>Le koala est un type d'ours ?</h4>
-    <button id="btn-1">VRAI</button>
-    <button id="btn-2">FAUX</button>
+    <button>VRAI</button>
+    <button value="true">FAUX</button>
     <p>La bonne réponse est FAUX</p>
 </div>
 <div class="click-event box">
     <h4>Le Titanic a coulé en 1912 ?</h4>
-    <button id="btn-1">VRAI</button>
-    <button id="btn-2">FAUX</button>
+    <button >VRAI</button>
+    <button value="true">FAUX</button>
     <p>La bonne réponse est FAUX</p>
 </div>
 
